Updates for aws deployment

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/pigeon-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PigeonChess - P2P Chess Game</title>
-    <script src="/node_modules/peerpigeon/dist/peerpigeon-browser.js"></script>
+    <script src="/peerpigeon-browser.js"></script>
     <style>
       * {
         margin: 0;
